<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_text" />

            <TextView
                android:text="@string/question_1"
                style="@style/Question"/>
            <RadioGroup
                android:id="@+id/question_1_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_answer_3"/>
            </RadioGroup>

            <TextView
            android:text="@string/question_2"
            style="@style/Question"/>
            <CheckBox
                android:text="@string/question_2_answer_1"
                style="@style/CheckBox" />
            <CheckBox
                android:text="@string/question_2_answer_2"
                style="@style/CheckBox" />
            <CheckBox
                android:text="@string/question_2_answer_3"
                style="@style/CheckBox" />
            <CheckBox
                android:text="@string/question_2_answer_4"
                style="@style/CheckBox" />

            <TextView
                android:text="@string/question_3"
                style="@style/Question"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:text="@string/question_4"
                style="@style/Question"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_answer_1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_answer_2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_answer_3"/>
            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/submit_button"
                android:onClick="submit"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>